web-server/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-server
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web-server
  template:
    metadata:
      labels:
        app: web-server
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        volumeMounts:
        - name: html-volume
          mountPath: /usr/share/nginx/html
        - name: nginx-config-volume
          mountPath: /etc/nginx/conf.d
      volumes:
      - name: html-volume
        emptyDir: {}
      - name: config-volume
        configMap:
          name: html-config
      - name: nginx-config-volume
        configMap:
          name: nginx-config
